Fixing media picker css when files are too long
--HG--
branch : 1.x

--- a/src/Orchard.Web/Modules/Orchard.MediaPicker/Styles/mediapicker.css
+++ b/src/Orchard.Web/Modules/Orchard.MediaPicker/Styles/mediapicker.css
@@ -35,6 +35,7 @@ body {
 #file-list {
     border:1px solid #bdbcbc;
     height:325px;
+    max-width:340px;
     max-height:325px;
     margin:9px 0 0 0;
     overflow:scroll;
